[LFC][IFC] ASSERTION FAILED availableWidth >= 0 in TextUtil::breakWord https://bugs.webkit.org/show_bug.cgi?id=244500

Reviewed by Antti Koivisto.

Do not try to compute the left side of a text content when there's absolutely no available space.

* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::Run::truncate):

Canonical link: https://commits.webkit.org/253939@main